force-app/main/default/objects/Admission_Application__c/Admission_Application__c.object-meta.xml
<CustomObject>
    <label>Admission Application</label>
    <nameField>
        <displayFormat>APP-{0000}</displayFormat>
        <label>Application Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Admission Applications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>