force-app/main/default/objects/Admission_Application__c/fields/Course__c.field-meta.xml
<CustomField>
    <fullName>Course__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Course</label>
    <referenceTo>Course__c</referenceTo>
    <relationshipLabel>Admission Applications</relationshipLabel>
    <relationshipName>Admission_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>