force-app/main/default/objects/Admission_Application__c/validationRules/Appln_Date_Cannot_Be_Future.validationRule-meta.xml
<ValidationRule>
    <fullName>Appln_Date_Cannot_Be_Future</fullName>
    <active>true</active>
    <errorConditionFormula>Application_Date__c  &gt;  NOW()</errorConditionFormula>
    <errorDisplayField>Application_Date__c</errorDisplayField>
    <errorMessage>Application Date cannot be in the future.</errorMessage>
</ValidationRule>